fix spacing between campus blocks

--- a/src/less/_roadconditions-public.less
+++ b/src/less/_roadconditions-public.less
@@ -110,7 +110,7 @@ ul {
 }
 
 .other-campus-conditions {
-    margin-top: 10px;
+    margin-top: 20px;
     float: left;
     clear: both;
 }
